<resources>
    <string name="app_name">Yash Classes</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_std_manage">Class Management</string>
    <string name="menu_add_student">Add Student</string>
    <string name="menu_manage_fees">Manage Fees</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string-array name="medium">
        <item>Gujarati</item>
        <item>English</item>
    </string-array>

    <string-array name="sort_by">
        <item>Name</item>
        <item>Class</item>
        <item>Medium</item>
    </string-array>
</resources>
